# AutoSquad

./: .dockerignore  .gitignore  AGENT_DESIGN.md  ARCHITECTURE.md  CONTRIBUTING.md  Dockerfile  ENHANCEMENT_RECOMMENDATIONS.md  INSTALLATION.md  INTEGRATION_COMPLETE.md  MODULAR_AGENTS_GUIDE.md  PROJECT_ENHANCEMENT_PLAN.md  PROJECT_STATUS.md  README.md  TODOS.md  TOKEN_OPTIMIZATION_GUIDE.md  __main__.py  pyproject.toml  requirements.txt  setup.py  test_install.py
projects/: BUSINESS_EXAMPLES.md
projects/agent-examples/: creative-writing-roles.yaml  enhanced-prompt-format.txt  restaurant-perspective-agents.yaml
projects/b2b-sales-website/: prompt.txt
projects/creative-writing-platform/: prompt.txt
projects/crm-integration-system/: prompt.txt
projects/enhanced-examples/: advanced-agent-patterns.yaml  production-ready-prompts.txt
projects/example-cli-tool/: prompt.txt
projects/financial-analysis-dashboard/: prompt.txt
projects/flowfoundry-marketing-site/: prompt.txt
projects/legal-contract-automation/: prompt.txt
projects/marketing-campaign-automation/: prompt.txt
projects/restaurant-operations-platform/: prompt.txt
projects/test-cli-improvements/: .autosquad_metadata.json  prompt.txt
scripts/: build_package.py
squad_runner/: __init__.py  cli.py  config.py  exceptions.py  execution.py  orchestrator.py  progress_display.py  progress_tracking.py  project_config_parser.py  project_manager.py  project_utils.py  token_optimization.py  tools.py  validation.py
squad_runner/agents/: __init__.py  architect.py  base.py  dynamic_agent.py  engineer.py  enhanced_prompts.py  pm.py  qa.py
