[build-system]
requires = ["setuptools>=45", "wheel", "setuptools-scm>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "autosquad"
version = "0.1.0"
description = "Autonomous Multi-Agent Development Framework built on AutoGen"
license = {text = "MIT"}
authors = [
    {name = "AutoSquad Team", email = "autosquad@example.com"}
]
maintainers = [
    {name = "AutoSquad Team", email = "autosquad@example.com"}
]
keywords = ["ai", "agents", "autogen", "development", "automation", "cli"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Environment :: Console",
]
requires-python = ">=3.8"
dependencies = [
    "autogen-agentchat>=0.4.0",
    "autogen-core>=0.4.0", 
    "autogen-ext[openai]>=0.4.0",
    "click>=8.1.0",
    "rich>=13.0.0",
    "colorama>=0.4.6",
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",
    "typing-extensions>=4.8.0",
    "tiktoken>=0.5.0",
    "openai>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "structlog>=23.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
]
build = [
    "build>=0.10.0",
    "twine>=4.0.0",
    "wheel>=0.40.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/AutoSquad"
Documentation = "https://github.com/yourusername/AutoSquad#readme"
Repository = "https://github.com/yourusername/AutoSquad"
"Bug Reports" = "https://github.com/yourusername/AutoSquad/issues"

[project.scripts]
autosquad = "squad_runner.cli:main"

[tool.setuptools]
packages = ["squad_runner"]
include-package-data = true

[tool.setuptools.package-data]
squad_runner = ["configs/*.yaml", "configs/*.yml"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true 